# WASMBrowserMLP

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: App.vue  style.css
src/components/: About.vue  ActivationVisualizer.vue  WasmNNApp.vue
