[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
plotters = "0.3"
plotters-canvas = "0.3"

[dependencies.getrandom]
version = "0.2"
features = ["js"]